mi primer commit

--- a/listas.html
+++ b/listas.html
@@ -3,71 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="/contraicon.jpg"/>
-    <title>Listas</title>
+    <title>Document</title>
 </head>
 <body>
-   <ul type="circle">
-    <li>COLORES.</li>
-    <li>ROJO</li>
-    <li>VERDE</li>
-    <li>AZUL</li>
-    <li>ROSA</li>
-    <li>NARANJA</li>
-    <li>AMARILLO</li>
-    <li>MORADO</li>
-    <li>LILA</li>
-    <li>CELESTE</li>
-   </ul>
-   <ul type="square">
-   <li>POSTRES</li>
-   <li>HELADO</li>
-   <li>PASTEL</li>
-   <li>GELATINA</li>
-   <li>MIEL</li>
-   <ul type="disk">
+    <center>
+    <h1>Listas</h1>
+</center>
+<h2>Comida</h2>
+<ul type ="disk">
     <li>coca</li>
-    <li>mirinda</li>
-    <li>fanta</li>
-    <li>squire</li>
-    <li>jumex</li>
-   </ul>
+    <li>carne</li>
+    <li>dulce</li>
+    <li>limon</li>
+    <li>naranja</li>
 </ul>
+<ul type ="squere">
+    <li>coca</li>
+    <li>carne</li>
+    <li>dulce</li>
+    <li>limon</li>
+    <li>naranja</li>
+</ul>
+<ul type ="circle">
+    <li>rojo</li>
+    <li>azul</li>
+    <li>verde</li>
+    <li>naranja</li>
+    <li>negro</li>
+</ul>
+<ol type="A">
+    <li>cama</li>
+    <li>ropa</li>
+    <li>lampara</li>
+    <li>planta</li>
+    <li>cobija</li>
+</ol>
 <ol type="a">
-    <li>pizza </li>
-    <li>mole</li>
-    <li>pozole</li>
-    <li>chamorro</li>
-    <li>guacamole</li>
-    
+    <li>gancho</li>
+    <li>suavitel</li>
+    <li>jabon</li>
+    <li>lavadora</li>
+    <li>secadora</li>
 </ol>
 <ol type="I">
-    <li>perro</li>
-    <li>gato</li>
-    <li>pez</li>
+    <li>camaleon</li>
     <li>leon</li>
-    <li>tortuga</li>
+    <li>hormigas</li>
+    <li>tortugas</li>
+    <li>perro</li>
 </ol>
 <ol type="i">
-    <li>ask</li>
-    <li>thalking too the moon</li>
-    <li>durmiendo con la luna</li>
-    <li>chica cocodrilo</li>
-    <li>Kill bill</li>
+    <li>angel</li>
+    <li>rebeca</li>
+    <li>yas</li>
+    <li>joshua</li>
+    <li>sof</li>
 </ol>
-<ol type="A">
-    <li>carro</li>
-    <li>libro</li>
-    <li>lapiz</li>
-    <li>llaves</li>
-    <li>reloj</li>
+<ol type="1">
+    <li>panta</li>
+    <li>basura</li>
+    <li>niños</li>
+    <li>juegos</li>
+    <li>arena</li>
 </ol>
+<dl>
+    <dd>CECYTEM</dd>
+    <dd>PLANTEL</dd>
+    <dd>TECAMAC</dd>
+    <dd>ECATEPEC</dd>
+    <dd>ZUMPANGO</dd>
+</dl>
 
 
-
-<div class="alert alert-primary" role="alert">
-    A simple primary alert—check it out!
-  </div>
-
+<center><h1>Descripcion</h1></center>
+<dl>
+    <lh><b>Definiciones </b></lh>
+    <dt>computadora</dt>
+    <dd>maquina diseñada para el uso humano funcionando con electricidad</dd>
+    <dt>tanque</dt>
+    <dd> objeto para transportar cosas como gas o agua</dd>
+    <dt>moto</dt>
+    <dd>vehiculo para otransporte personal o publico</dd>
+    <dt>agua</dt>
+    <dd>elemento que la humanidad usa para varias cosas </dd>
+    <dt>rojo </dt>
+    <dd>color con el cual se distinguen las cosas de otro color</dd>
+</dl>
 </body>
 </html>
